<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PresentationActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="100dp">

    <ImageView
        android:id="@+id/logoIconImgView"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/icon_simple_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoNameImgView"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/text_simple_task"
        app:layout_constraintEnd_toEndOf="@+id/logoIconImgView"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/logoIconImgView"
        app:layout_constraintTop_toBottomOf="@+id/logoIconImgView" />

    <Button
        android:id="@+id/singupBtn"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/green_2"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/inter_bold"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/singupBtn"
        app:layout_constraintStart_toStartOf="@+id/singupBtn"
        app:layout_constraintTop_toBottomOf="@+id/singupBtn" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/gray_4"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoNameImgView">

        <EditText
            android:id="@+id/editTextSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:autofillHints="@android:string/autofill"
            android:background="@null"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:linksClickable="false"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="352dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/gray_4"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEmail">

        <EditText
            android:id="@+id/editTextSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="451dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/gray_4"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPassword">

        <EditText
            android:id="@+id/editTextSignupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/confirmPasswordHint"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="451dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/confirmPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cardViewConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/cardViewConfirmPassword" />

    <TextView
        android:id="@+id/passwordTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cardViewPassword"
        app:layout_constraintStart_toStartOf="@+id/cardViewPassword" />

    <TextView
        android:id="@+id/emailTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cardViewEmail"
        app:layout_constraintStart_toStartOf="@+id/cardViewEmail" />

    <ProgressBar
        android:id="@+id/progressBarSignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/singupBtn"
        app:layout_constraintEnd_toEndOf="@+id/singupBtn"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/singupBtn"
        app:layout_constraintTop_toBottomOf="@+id/cardViewConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>