<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddLocalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/task_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewLocalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/local"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mapFragmentLocal"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        map:cameraZoom="16"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-15dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/radius"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarLocalRadius"
        app:layout_constraintStart_toStartOf="@+id/seekBarLocalRadius" />

    <SeekBar
        android:id="@+id/seekBarLocalRadius"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:progressTint="@color/task_theme"
        android:thumbTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupLocalTrigger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/menuAddEdtLocal"
        layout="@layout/menu_add_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupLocalTrigger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/menuAddEdtLocal"
        app:layout_constraintEnd_toEndOf="@+id/seekBarLocalRadius"
        app:layout_constraintStart_toStartOf="@+id/seekBarLocalRadius">

        <RadioButton
            android:id="@+id/radioBtnLocalArrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/whenArrive"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioBtnLocalLeave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whenLeave"
            android:textColor="@color/black" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>